# codex-virtual-dj-app

./: README.md
DJ-App/: .gitignore  CMakeLists.txt  DJ GUI_New.jucer  LICENSE  README.md
DJ-App/Archive/: ButtonCellComponent.cpp  ButtonCellComponent.h  DJAudioPlayer.cpp  DJAudioPlayer.h  DJDisk.cpp  DJDisk.h  DeckGUI.cpp  DeckGUI.h  MainComponent.cpp  MainComponent.h  PlaylistComponent.cpp  PlaylistComponent.h  README.md  VerticalGradientMeter.cpp  VerticalGradientMeter.h  WaveformDisplay.cpp  WaveformDisplay.h
DJ-App/Builds/MacOSX/: Info-App.plist
DJ-App/Builds/MacOSX/DJ GUI_New.xcodeproj/: project.pbxproj
DJ-App/Builds/MacOSX/DJ GUI_New.xcodeproj/project.xcworkspace/xcuserdata/yrish.xcuserdatad/: UserInterfaceState.xcuserstate
DJ-App/Builds/MacOSX/DJ GUI_New.xcodeproj/xcuserdata/yrish.xcuserdatad/xcschemes/: xcschememanagement.plist
DJ-App/Builds/MacOSX/thisMightWork.xcodeproj/: project.pbxproj
DJ-App/Builds/MacOSX/thisMightWork.xcodeproj/project.xcworkspace/xcuserdata/yrish.xcuserdatad/: UserInterfaceState.xcuserstate
DJ-App/JuceLibraryCode/: JuceHeader.h
DJ-App/Source/: Main.cpp
DJ-App/Source/Components/: JogWheel.cpp  JogWheel.h  ModernButton.cpp  ModernButton.h  ModernSlider.cpp  ModernSlider.h  VUMeter.cpp  VUMeter.h  WaveformView.cpp  WaveformView.h
DJ-App/Source/Controller/: DJController.cpp  DJController.h
DJ-App/Source/Model/: AudioEngine.cpp  AudioEngine.h  PlaylistManager.cpp  PlaylistManager.h  Track.cpp  Track.h
DJ-App/Source/View/: DeckView.cpp  DeckView.h  MainView.cpp  MainView.h  MixerView.cpp  MixerView.h  PlaylistView.cpp  PlaylistView.h
(+1 files in other folders)
